--- a/SWAT/Views/User/Edit.cshtml
+++ b/SWAT/Views/User/Edit.cshtml
@@ -6,253 +6,255 @@
 
 <h2>Edit</h2>
 
-
-@using (Html.BeginForm())
-{
+@using (Html.BeginForm()) {
     @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>Userid</h4>
-        <hr />
-        @Html.ValidationSummary(true)
-        @Html.HiddenFor(model => model.Userid1)
+    @Html.ValidationSummary(true)
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Username, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Username)
-                @Html.ValidationMessageFor(model => model.Username)
-            </div>
+    <fieldset>
+        <legend>Userid</legend>
+
+        <div class="editor-label">
+            @Html.LabelFor(model => model.Userid1)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.Userid1)
+            @Html.ValidationMessageFor(model => model.Userid1)
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Password, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Password)
-                @Html.ValidationMessageFor(model => model.Password)
-            </div>
+        <div class="editor-label">
+            @Html.LabelFor(model => model.Username)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.Username)
+            @Html.ValidationMessageFor(model => model.Username)
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.eMail, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.eMail)
-                @Html.ValidationMessageFor(model => model.eMail)
-            </div>
+        <div class="editor-label">
+            @Html.LabelFor(model => model.Password)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.Password)
+            @Html.ValidationMessageFor(model => model.Password)
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Notes, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Notes)
-                @Html.ValidationMessageFor(model => model.Notes)
-            </div>
+        <div class="editor-label">
+            @Html.LabelFor(model => model.eMail)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.eMail)
+            @Html.ValidationMessageFor(model => model.eMail)
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.SessionVars, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.SessionVars)
-                @Html.ValidationMessageFor(model => model.SessionVars)
-            </div>
+        <div class="editor-label">
+            @Html.LabelFor(model => model.Notes)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.Notes)
+            @Html.ValidationMessageFor(model => model.Notes)
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.secondaryId, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.secondaryId)
-                @Html.ValidationMessageFor(model => model.secondaryId)
-            </div>
+        <div class="editor-label">
+            @Html.LabelFor(model => model.SessionVars)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.SessionVars)
+            @Html.ValidationMessageFor(model => model.SessionVars)
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.type, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.type)
-                @Html.ValidationMessageFor(model => model.type)
-            </div>
+        <div class="editor-label">
+            @Html.LabelFor(model => model.secondaryId)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.secondaryId)
+            @Html.ValidationMessageFor(model => model.secondaryId)
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.properties, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.properties)
-                @Html.ValidationMessageFor(model => model.properties)
-            </div>
+        <div class="editor-label">
+            @Html.LabelFor(model => model.type)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.type)
+            @Html.ValidationMessageFor(model => model.type)
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.targetName, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.targetName)
-                @Html.ValidationMessageFor(model => model.targetName)
-            </div>
+        <div class="editor-label">
+            @Html.LabelFor(model => model.properties)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.properties)
+            @Html.ValidationMessageFor(model => model.properties)
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.NotifStatus, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.NotifStatus)
-                @Html.ValidationMessageFor(model => model.NotifStatus)
-            </div>
+        <div class="editor-label">
+            @Html.LabelFor(model => model.targetName)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.targetName)
+            @Html.ValidationMessageFor(model => model.targetName)
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.NotifCode, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.NotifCode)
-                @Html.ValidationMessageFor(model => model.NotifCode)
-            </div>
+        <div class="editor-label">
+            @Html.LabelFor(model => model.NotifStatus)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.NotifStatus)
+            @Html.ValidationMessageFor(model => model.NotifStatus)
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.NotifReqCodeTime, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.NotifReqCodeTime)
-                @Html.ValidationMessageFor(model => model.NotifReqCodeTime)
-            </div>
+        <div class="editor-label">
+            @Html.LabelFor(model => model.NotifCode)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.NotifCode)
+            @Html.ValidationMessageFor(model => model.NotifCode)
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.NotifActCodeTime, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.NotifActCodeTime)
-                @Html.ValidationMessageFor(model => model.NotifActCodeTime)
-            </div>
+        <div class="editor-label">
+            @Html.LabelFor(model => model.NotifReqCodeTime)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.NotifReqCodeTime)
+            @Html.ValidationMessageFor(model => model.NotifReqCodeTime)
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.PMEmailNotificationsEnabled, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.PMEmailNotificationsEnabled)
-                @Html.ValidationMessageFor(model => model.PMEmailNotificationsEnabled)
-            </div>
+        <div class="editor-label">
+            @Html.LabelFor(model => model.NotifActCodeTime)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.NotifActCodeTime)
+            @Html.ValidationMessageFor(model => model.NotifActCodeTime)
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.UseOntarioMaps, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.UseOntarioMaps)
-                @Html.ValidationMessageFor(model => model.UseOntarioMaps)
-            </div>
+        <div class="editor-label">
+            @Html.LabelFor(model => model.PMEmailNotificationsEnabled)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.PMEmailNotificationsEnabled)
+            @Html.ValidationMessageFor(model => model.PMEmailNotificationsEnabled)
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.First_Name, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.First_Name)
-                @Html.ValidationMessageFor(model => model.First_Name)
-            </div>
+        <div class="editor-label">
+            @Html.LabelFor(model => model.UseOntarioMaps)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.UseOntarioMaps)
+            @Html.ValidationMessageFor(model => model.UseOntarioMaps)
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Last_Name, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Last_Name)
-                @Html.ValidationMessageFor(model => model.Last_Name)
-            </div>
+        <div class="editor-label">
+            @Html.LabelFor(model => model.First_Name)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.First_Name)
+            @Html.ValidationMessageFor(model => model.First_Name)
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Address, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Address)
-                @Html.ValidationMessageFor(model => model.Address)
-            </div>
+        <div class="editor-label">
+            @Html.LabelFor(model => model.Last_Name)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.Last_Name)
+            @Html.ValidationMessageFor(model => model.Last_Name)
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.utmX, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.utmX)
-                @Html.ValidationMessageFor(model => model.utmX)
-            </div>
+        <div class="editor-label">
+            @Html.LabelFor(model => model.Address)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.Address)
+            @Html.ValidationMessageFor(model => model.Address)
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.utmY, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.utmY)
-                @Html.ValidationMessageFor(model => model.utmY)
-            </div>
+        <div class="editor-label">
+            @Html.LabelFor(model => model.utmX)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.utmX)
+            @Html.ValidationMessageFor(model => model.utmX)
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Joined, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Joined)
-                @Html.ValidationMessageFor(model => model.Joined)
-            </div>
+        <div class="editor-label">
+            @Html.LabelFor(model => model.utmY)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.utmY)
+            @Html.ValidationMessageFor(model => model.utmY)
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Interests, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Interests)
-                @Html.ValidationMessageFor(model => model.Interests)
-            </div>
+        <div class="editor-label">
+            @Html.LabelFor(model => model.Joined)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.Joined)
+            @Html.ValidationMessageFor(model => model.Joined)
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Workplace, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Workplace)
-                @Html.ValidationMessageFor(model => model.Workplace)
-            </div>
+        <div class="editor-label">
+            @Html.LabelFor(model => model.Interests)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.Interests)
+            @Html.ValidationMessageFor(model => model.Interests)
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.SecretQuestion, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.SecretQuestion)
-                @Html.ValidationMessageFor(model => model.SecretQuestion)
-            </div>
+        <div class="editor-label">
+            @Html.LabelFor(model => model.Workplace)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.Workplace)
+            @Html.ValidationMessageFor(model => model.Workplace)
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.SecretAnswer, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.SecretAnswer)
-                @Html.ValidationMessageFor(model => model.SecretAnswer)
-            </div>
+        <div class="editor-label">
+            @Html.LabelFor(model => model.SecretQuestion)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.SecretQuestion)
+            @Html.ValidationMessageFor(model => model.SecretQuestion)
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.AvatarUserPhotoID, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.AvatarUserPhotoID)
-                @Html.ValidationMessageFor(model => model.AvatarUserPhotoID)
-            </div>
+        <div class="editor-label">
+            @Html.LabelFor(model => model.SecretAnswer)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.SecretAnswer)
+            @Html.ValidationMessageFor(model => model.SecretAnswer)
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.LastSuggestedContentDate, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.LastSuggestedContentDate)
-                @Html.ValidationMessageFor(model => model.LastSuggestedContentDate)
-            </div>
+        <div class="editor-label">
+            @Html.LabelFor(model => model.AvatarUserPhotoID)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.AvatarUserPhotoID)
+            @Html.ValidationMessageFor(model => model.AvatarUserPhotoID)
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.FullName, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.FullName)
-                @Html.ValidationMessageFor(model => model.FullName)
-            </div>
+        <div class="editor-label">
+            @Html.LabelFor(model => model.LastSuggestedContentDate)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.LastSuggestedContentDate)
+            @Html.ValidationMessageFor(model => model.LastSuggestedContentDate)
         </div>
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
-            </div>
+        <div class="editor-label">
+            @Html.LabelFor(model => model.FullName)
         </div>
-    </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.FullName)
+            @Html.ValidationMessageFor(model => model.FullName)
+        </div>
+
+        <p>
+            <input type="submit" value="Save" />
+        </p>
+    </fieldset>
 }
 
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
 
-<script src="~/Scripts/jquery-1.10.2.min.js"></script>
-<script src="~/Scripts/jquery.validate.min.js"></script>
-<script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
