--- a/SWAT/Views/CCIndig/Edit.cshtml
+++ b/SWAT/Views/CCIndig/Edit.cshtml
@@ -18,35 +18,24 @@
         @Html.HiddenFor(model => model.ID)
         @Html.HiddenFor(model => model.SurveyID, new { SurveyID=ViewBag.SurveyID})
 
+        <p>
+            @ViewBag.Question1
+        </p>
         <div class="form-group">
-            @Html.LabelFor(model => model.indigPop, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.indigPop)
                 @Html.ValidationMessageFor(model => model.indigPop)
             </div>
         </div>
 
+        <hr />
+        <p>
+            @ViewBag.Question2
+        </p>
         <div class="form-group">
-            @Html.LabelFor(model => model.indigPopPerCapita, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.indigPopPerCapita)
-                @Html.ValidationMessageFor(model => model.indigPopPerCapita)
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.longtermPop, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.longtermPop)
                 @Html.ValidationMessageFor(model => model.longtermPop)
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.longtermPopPerCapita, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.longtermPopPerCapita)
-                @Html.ValidationMessageFor(model => model.longtermPopPerCapita)
             </div>
         </div>
 
