--- a/SWAT/Views/Location/Create.cshtml
+++ b/SWAT/Views/Location/Create.cshtml
@@ -4,6 +4,11 @@
     ViewBag.Title = "Create";
 }
 
+@section Scripts
+{
+    <script src="@Url.Content("~/Content/Location.js")" type="text/javascript"></script>
+}
+
 <h2>Create New Survey</h2>
 
 
@@ -40,11 +45,11 @@
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.subnationalID, "Subnation", new { @class = "control-label col-md-2" })
+         <div class="form-group">
+            @Html.LabelFor(model => model.regionID, "Region", new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("subnationalID", String.Empty)
-                @Html.ValidationMessageFor(model => model.subnationalID)
+                @Html.DropDownList("regionID", String.Empty)
+                @Html.ValidationMessageFor(model => model.regionID)
             </div>
         </div>
 
@@ -56,16 +61,13 @@
             </div>
         </div>
 
-
         <div class="form-group">
-            @Html.LabelFor(model => model.regionID, "Region", new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.subnationalID, "Subnation", new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("regionID", String.Empty)
-                @Html.ValidationMessageFor(model => model.regionID)
+                @Html.DropDownList("subnationalID", String.Empty)
+                @Html.ValidationMessageFor(model => model.subnationalID)
             </div>
         </div>
-
-        
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
