--- a/SWAT/Views/Location/Edit.cshtml
+++ b/SWAT/Views/Location/Edit.cshtml
@@ -4,6 +4,11 @@
     ViewBag.Title = "Edit";
 }
 
+@section Scripts
+{
+    <script src="@Url.Content("~/Content/Location.js")" type="text/javascript"></script>
+}
+
 <h2>Edit</h2>
 
 
@@ -42,10 +47,10 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.subnationalID, "Subnation", new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.regionID, "Region", new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("subnationalID", String.Empty)
-                @Html.ValidationMessageFor(model => model.subnationalID)
+                @Html.DropDownList("regionID", String.Empty)
+                @Html.ValidationMessageFor(model => model.regionID)
             </div>
         </div>
 
@@ -58,10 +63,10 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.regionID, "Region", new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.subnationalID, "Subnation", new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("regionID", String.Empty)
-                @Html.ValidationMessageFor(model => model.regionID)
+                @Html.DropDownList("subnationalID", String.Empty)
+                @Html.ValidationMessageFor(model => model.subnationalID)
             </div>
         </div>
 
