--- a/SWAT/Views/ScoreVar/Delete.cshtml
+++ b/SWAT/Views/ScoreVar/Delete.cshtml
@@ -23,6 +23,13 @@
     <div class="display-field">
         @Html.DisplayFor(model => model.Description)
     </div>
+
+    <div class="display-label">
+         @Html.DisplayNameFor(model => model.lkpSWATSectionLU.SectionName)
+    </div>
+    <div class="display-field">
+        @Html.DisplayFor(model => model.lkpSWATSectionLU.SectionName)
+    </div>
 </fieldset>
 @using (Html.BeginForm()) {
     @Html.AntiForgeryToken()
