--- a/SWAT/Views/ScoreVar/Details.cshtml
+++ b/SWAT/Views/ScoreVar/Details.cshtml
@@ -22,6 +22,13 @@
     <div class="display-field">
         @Html.DisplayFor(model => model.Description)
     </div>
+
+    <div class="display-label">
+         @Html.DisplayNameFor(model => model.lkpSWATSectionLU.SectionName)
+    </div>
+    <div class="display-field">
+        @Html.DisplayFor(model => model.lkpSWATSectionLU.SectionName)
+    </div>
 </fieldset>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id=Model.ID }) |
