--- a/SWAT/Views/ScoreVar/Index.cshtml
+++ b/SWAT/Views/ScoreVar/Index.cshtml
@@ -17,6 +17,9 @@
         <th>
             @Html.DisplayNameFor(model => model.Description)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.lkpSWATSectionLU.SectionName)
+        </th>
         <th></th>
     </tr>
 
@@ -27,6 +30,9 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Description)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.lkpSWATSectionLU.SectionName)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
